# os_proj1

./: .clang-format  .gitignore  CMakeLists.txt  job10.txt  job15.txt  job5.txt  job_gen.cpp  job_gen.h  job_gen_main.cpp
src/: CMakeLists.txt  job_gen.cpp  job_gen.h  job_gen_main.cpp  main.cpp  scheduler.cpp  scheduler.h
